syntax = "proto3";

option csharp_namespace = "Proto.DTO.Tag";

message TagProto {
  string tag_id = 1;
  string name = 2;
  bool is_selected = 3;
}
